# otobusum-anlik-updater

./: .env.example  Cargo.toml
src/: main.rs  updater.rs
src/models/: database.rs  ist.rs  izm.rs  mod.rs  soap.rs
src/updaters/: ist.rs  izm.rs  mod.rs
