[package]
name = "otobusum-anlik-updater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.42.0", features = ["macros", "rt"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
